<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autofillHints="email"
        android:background="@drawable/style"
        android:defaultFocusHighlightEnabled="true"
        android:hint="@string/enter_your_username"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/input_password"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="@android:color/black"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:autofillHints="Password"
        android:background="@drawable/style"
        android:defaultFocusHighlightEnabled="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusUp="@+id/input_email"
        android:nextFocusDown="@+id/btn_login"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />


    <Button

        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/style"
        android:backgroundTint="#000000"
        android:clickable="true"
        android:textAllCaps="false"
        android:padding="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>