<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/heading_text"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_news"
        android:background="#000000"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold">
    </TextView>
    <ImageView
        android:id="@+id/profile_img"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_width="30dp"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/lat_text"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/latitude"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_text" />

    <TextView
        app:layout_constraintStart_toEndOf="@+id/lat_text"
        android:id="@+id/latText_data"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@+id/lat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white" />

    <TextView

        android:id="@+id/long_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/latText_data"
        app:layout_constraintStart_toStartOf="@+id/lat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/lat_text"
        app:layout_constraintStart_toEndOf="@+id/long_text"
        android:id="@+id/lonTextView"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f5f5f5" />



    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:listitem="@layout/item_news_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lonTextView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>